--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
-    "papaparse": "^5.5.3"
+    "papaparse": "^5.5.3",
+    "serve": "^14.2.4"
   },
   "name": "sistema7.2.1",
   "version": "1.0.0",
